RESOLVED FIXED240444
[Unix] Ignore SIGPIPE in subprocesses
https://bugs.webkit.org/show_bug.cgi?id=240444
Summary [Unix] Ignore SIGPIPE in subprocesses
Lauro Moura
Reported 2022-05-15 22:59:39 PDT
[Unix] Ignore SIGPIPE in subprocesses
Attachments
Patch (3.63 KB, patch)
2022-05-15 23:01 PDT, Lauro Moura
no flags
Patch (2.48 KB, patch)
2022-05-22 20:38 PDT, Lauro Moura
no flags
Lauro Moura
Comment 1 2022-05-15 23:01:24 PDT
Lauro Moura
Comment 2 2022-05-22 20:38:56 PDT
Radar WebKit Bug Importer
Comment 3 2022-05-22 23:00:15 PDT
EWS
Comment 4 2022-05-22 23:31:20 PDT
Committed r294626 (250852@main): <https://commits.webkit.org/250852@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459659 [details].
Note You need to log in before you can comment on or make changes to this bug.