Ignore SIGPIPE in subprocesses https://bugs.webkit.org/show_bug.cgi?id=240444

Reviewed by Adrian Perez de Castro.

One common case where ignoring SIGPIPE is desired is to avoid issues
when logging to journald and it crashes. As stated in
https://www.freedesktop.org/software/systemd/man/systemd-journald.service

"In order to react gracefully in this (journald stopped) case it is
recommended that programs logging to standard output/error ignore such
errors."

* Shared/AuxiliaryProcess.cpp: Avoid default platformInitialize on
Unix.
* Shared/unix/AuxiliaryProcessMain.cpp:
(WebKit::AuxiliaryProcess::platformInitialize): Added, ignore SIGPIPE.

Canonical link: https://commits.webkit.org/250852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294626 268f45cc-cd09-0410-ab3c-d52691b4dbfc